# data-science

./: .gitattributes  .gitignore  .output.txt  README.md  check_versions.py  pyproject.toml  utils.py
.ipynb_checkpoints/: cleaning_data-checkpoint.ipynb
.junie/: guidelines.md  guidlines.md
Writerside/: doc.tree  writerside.cfg
Writerside/cfg/: buildprofiles.xml
Writerside/topics/: linear-algebra.md  starter-topic.md
data/: Life_Expectancy_Data.csv  Melbourne_Dataset_proect.docx  StatisticsTranscript  air-quality.csv  ansur.xlsx  bonds.xls  diabetes.csv  diabetes_2.csv  diabetes_imputed_sota.csv  melbourne_dataset_project.md  planes.csv  synthetic_dataset.csv  tvmarketing.csv  wine.csv
data/time-series-ecb/: Debts_secs_stocks.csv  Deposits_and_loan_claims_stocks.csv  Equity_stocks.csv  Inv_fund_units_stocks.csv  Total_Assets.csv  non_financial_assets_stocks.csv  other_assets_stocks.csv
notebooks/: 01_cleaning_data.ipynb  03_synthetic_data.ipynb  04_melb_house_sales.ipynb  05_simplified_prediction.ipynb  06_model_inspection.ipynb  08_three_variable_linear_regression.ipynb  Ai_Quality.ipynb  C2_W1_Lab_1_differentiation_in_python.ipynb  C2_W3_Lab_1_Regression_with_Perceptron.ipynb  Data Validation.ipynb  Data_Validation_Project.ipynb  Data_manipultion(1).ipynb  Data_manipultion(2).ipynb  Data_manipultion.ipynb  Logistic_Regression_-_Underlying_ideas.ipynb  Mismatching_lists.ipynb  Modelling_run_through_-_upto_validation.ipynb  Statistics.ipynb  Stats.ipynb  Time_series_ecb.ipynb  cleaning_data.ipynb  linear_algebra.ipynb  project_01_student_performance_assingment.ipynb  t_Distributed_Stochastic_Neighbour_Embedding.ipynb  time_series_ecb.ipynb
notebooks/data_science_explained/: C1_W2_Lab01_Python_Numpy_Vectorization_Soln.ipynb  C1_W2_Lab05_Sklearn_GD_Soln.ipynb  C1_W2_Linear_Regression.ipynb  C1_W3_Logistic_Regression.ipynb  data_science.ipynb  data_science_fundamentals.ipynb
notebooks/data_science_notes/: Imputing.ipynb  ds_tutor_workflow.ipynb
notebooks/introduction_to_data_science/: customer-churn-prediction-94-random-forest.ipynb  (+2 more)
utils/: custom_estimators.py  ds_utils.py  utils.py  viz.py
(+68 files in other folders)
