[project]
name = "data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.0",
    "jax>=0.8.1",
    "jupyter-client>=8.6.3",
    "missingno>=0.5.2",
    "notebook>=7.4.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "pyzmq>=27.1.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "scipy-stubs==1.16.2.3",
    "statsmodels>=0.14.5",
    "sympy>=1.14.0",
    "xlrd>=2.0.2",
]
