[project]
name = "data-science"
version = "0.1.0"
description = "Data Science Learning Repo"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.0.0",
    "jax>=0.9",
    "jupyter-client>=8.6.3",
    "kaggle>=1.8.3",
    "kagglehub==0.4.2",
    "matplotlib>=3.10.8",
    "notebook>=7.4.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs~=3.0.0",
    "plotly>=6.5.2",
    "python-dotenv>=1.2.1",
    "pyzmq>=27.1.0",
    "scikit-learn>=1.8",
    "scipy>=1.17",
    "scipy-stubs==1.17.0.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "sympy>=1.14.0",
    "xlrd>=2.0.2",
    "yellowbrick>=1.5",
    "xgboost>=2.0",
    "lightgbm>=4.6.0",
    "ds-tutor",
    "plotnine>=0.15.3",
    "mplcursors>=0.7",
    "ipywidgets>=8.1.8",
    "missingno>=0.5.2",
]

[tool.uv.sources]
ds-tutor = { path = "../ds-tutor", editable = true }
